[package]
name = "rstl"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
color-eyre = "0.6.4"
colored = "3.0.0"
figlet-rs = "0.1.5"
inkwell = { version = "0.6.0", features = ["llvm18-1"] }
logos = "0.15.0"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
toml = "0.8.22"
tracing = "0.1.41"
